--- a/docs/book/架构整洁之道.md
+++ b/docs/book/架构整洁之道.md
@@ -1,1 +1,51 @@
 # 架构整洁之道
+## 前言
+// todo
+### 左耳朵耗子 R.I.P
+程序员可以分为三个层次：普通程序员、工程师、架构师。
+
+* 普通程序员：编写代码，让程序跑起来的人。
+* 工程师：考虑易读性、易扩展性、易维护性、性能优化等。
+* 架构师：解决问题时，结合**现有经验**、考虑不同的**业界解决方案**，结合**实际场景**做出决策/tradeoff。比如基于业务场景给出解决方案、基于更高级的技术给出解决方案、设计更加灵活的系统等等。比 工程师 站在更高的视角考虑问题。
+
+《代码整洁之道》教你写出易读、可扩展、可维护、可重用的代码，《代码整洁之道：程序员的职业素养》教你怎样变成一个有修养的程序员，而《架构整洁之道》基本上是在描述软件设计的一些理论知识。
+
+《架构整洁之道》大体分成三个部分：编程范式（结构化编程、面向对象编程和函数式编程），设计原则（主要是SOLID），以及软件架构（其中讲了很多高屋建翎的内容）
+
+架构或者设计，核心要解决的问题是：分离 控制与逻辑。
+
+* 逻辑：指代业务逻辑，解决用户的问题
+* 控制：与业务无关的部分，比如多线程、异步、服务发现、部署、弹性伸缩等**切面**。
+
+### yurii-says/余晟
+架构设计是一门复杂的学问，要综合考虑各种因素，**做出权衡**：
+
+* **编码**
+* **质量**
+* **部署**
+* **发布**
+* **运维**
+* **排障**
+* **升级**
+* 等等
+
+## 概述
+为什么要考虑软件的**架构与设计**？好的架构能够有如下优势
+
+* 节省项目构建、维护的人力成本
+* 让需求易于实现，只需对项目做很小的变更
+* 避免缺陷
+
+也即，用最小的成本，最大程度满足功能性和灵活性的需求。
+
+
+### 第一章、设计与架构究竟是什么
+
+架构是从**更高、更抽象的视角**描述软件、设计是从更**底层的视角**描述软件，二者不可分割。后文中出现的架构包括了架构与设计两层意思。
+
+软件架构的**终极目标**是，用**最小的人力成本**来满足**构建**和**维护**该系统的需求。
+
+### 第二章、两个价值的维度
+
+## 从基础构建开始：编程范式
+### 第三章、编程范式总览
