<架构整洁之道> 第2~4章笔记

--- a/docs/book/架构整洁之道.md
+++ b/docs/book/架构整洁之道.md
@@ -46,6 +46,33 @@
 软件架构的**终极目标**是，用**最小的人力成本**来满足**构建**和**维护**该系统的需求。
 
 ### 第二章、两个价值的维度
+软件系统的两个价值维度：
+
+* **系统行为**的正确性：当前系统能否按照预期运行。
+* **系统架构**的灵活性：需求迭代时，系统更新的难易程度。
+
+两者都很重要，但前者**更加紧急**，因为系统在每时每刻都要保证行为的正确性；后者虽然不紧急，但很**容易被忽略**，而忽略的后果很严重，忽略后系统将变得越来越难以维护，终有一天变得无法再修改，只能重构来实现新功能需求。
+
+系统行为的正确性不需要更多强调，但是系统架构的灵活性则更需要牢记，在设计系统之初、在系统演进时都要思考。
 
 ## 从基础构建开始：编程范式
+编程范式指的是程序采用什么样的代码结构，与具体的编程语言关系相对较小。
+
 ### 第三章、编程范式总览
+
+三类编程范式及其意义：
+
+* 结构化编程：对程序控制权的直接转移进行了限制和规范，通俗讲就是限制了`goto`语句
+* 面向对象编程（OOP）：对程序控制权的间接转移进行了限制和规范, 通俗讲就是限制了函数指针，程序就是类及其之间的函数调用
+* 函数式编程：对程序中的赋值进行了限制和规范，通俗讲就是限制了赋值语句
+
+与架构三大关注点的关系：
+  
+* 功能性：多态可以跨越架构边界，对应 OOP
+* 组件独立性：各个模块/函数内部实现则遵循结构化编程范式
+* 数据管理：数据存放与访问权限，对应函数式编程
+
+### 第四章、结构化编程
+`goto` 语句导致功能/模块无法被递归拆分成更小的部分，所以需要限制。
+
+强调将大型系统**按照功能拆分**成各个模块和组件。并且每个模块/组件**可以被方便的测试**（单元测试 or 集成测试）。
