<架构整洁之道> 第5~6章笔记

--- a/docs/book/架构整洁之道.md
+++ b/docs/book/架构整洁之道.md
@@ -72,7 +72,61 @@
 * 组件独立性：各个模块/函数内部实现则遵循结构化编程范式
 * 数据管理：数据存放与访问权限，对应函数式编程
 
+每个范式都约束了某种编写代码的方式，明确了**什么不应该做**。
+
 ### 第四章、结构化编程
 `goto` 语句导致功能/模块无法被递归拆分成更小的部分，所以需要限制。
 
 强调将大型系统**按照功能拆分**成各个模块和组件。并且每个模块/组件**可以被方便的测试**（单元测试 or 集成测试）。
+
+
+### 第五章、面向对象编程
+**封装**：数据和操作数据的函数封装在一个类中，要求高内聚、低耦合。
+
+**继承**：可以在某个作用域内对外部定义的某一组变量与函数进行覆盖。
+
+**多态**，实质是一种函数指针的应用：
+
+* 例如，在C++中，类中的虚函数地址都被记录在 vtable 的数据结构中。对虚函数的每次调用都要先查询这个表；接口的实现类的构造函数负责将该类的虚函数地址加载到对象的 vtable 中。
+
+如果没有面向对象技术，直接使用函数指针实现多态充满了危险，因为对**指针的正确调用**需要人为遵守约定，否则会有 bug 或出错。因此，面向对象编程语言为我们消除了人工遵守约定的必要，也就等于消除了这方面的危险性。采用面向对象编程语言让多态实现变得非常简单，让一个传统C程序员可以去做以前不敢想的事情。
+
+通过多态，面向对象编程其实是对程序间接控制权的转移进行了约束。
+
+通过多态，能够实现**插件式架构**，可以在调用方不做变更情况下，替换底层的实现。
+
+* 例如，Unix 系统将 IO 设备设计成插件形式，即不同的驱动设备程序只要**实现指定的接口**，就能被系统调用。
+
+**依赖反转**，是一种设计思想，这里可以粗暴的理解为**面向接口编程**。上层函数只能调用底层的类的接口，而接口一般都是稳定不变的，但是接口的实现可以有很多变化。
+
+* 在不用**依赖反转**时，依赖的方向是 上层函数依赖其调用的函数。
+* 在使用**依赖反转**时，依赖的方向变成，底层函数的实现需要依赖事先约定好的接口，具体来说就是函数签名不能变。
+
+
+依赖反转的好处是
+
+* 让组件具有独立部署能力：当某个组件的源代码需要修改时，仅仅需要重新部署该组件，不需要更改其他组件
+* 让系统具有独立开发能力：如果系统中的所有组件都可以独立部署，那它们就可以由不同的团队并行开发，这就是所谓的独立开发能力
+
+举个例子：利用**依赖反转**的设计，让数据库模块和用户界面模块都依赖于业务逻辑模块（而非相反），让用户界面和数据库都成为业务逻辑的插件。这样一来，业务逻辑、用户界面以及数据库就可以被编译成三个独立的组件或者部署单元。
+
+***面向对象编程对架构的意义***：面向对象编程就是以多态为手段来对源代码中的依赖关系进行控制的能力，这种能力让软件架构师可以构建出某种插件式架构，让高层策略性组件与底层实现性组件相分离，底层组件可以被编译成插件，实现独立于高层组件的开发和部署。
+
+### 第六章、函数式编程
+函数式编程中一个核心的概念是 —— 不可变性。比如 Scala 编程语言中的 `val` 关键字指定不可变变量。
+
+不可变性与架构的关系：所有的竞争问题、死锁问题、并发更新问题都是由可变变量导致的。
+
+根据可变性，对系统进行隔离：
+
+* 一个架构设计良好的应用程序应该将状态修改的部分和不需要修改状态的部分隔离成单独的组件，然后用合适的机制来保护可变量。
+* 软件架构师应该着力于将大部分处理逻辑都归于不可变组件中，可变状态组件的逻辑应该越少越好。
+
+不可变性在架构上的应用 —— [事件溯源](https://juejin.cn/post/7122768490863263781)。举个例子
+
+* 银行维护账户余额时，不保存具体账户余额，仅仅保存事务日志，那么当有人想查询账户余额时，我们就将全部交易记录取出，并且每次都得从最开始到当下进行累计。这样就不需要变量了。类似日志重放。
+* 并不需要这个设计永远可行，而且可能在整个程序的生命周期内，我们有足够的存储和处理能力来满足它。
+
+## 设计原则
+
+### 第七章、单一职责原则
