--- a/docs/rfc/源码阅读技巧总结.md
+++ b/docs/rfc/源码阅读技巧总结.md
@@ -15,3 +15,9 @@
 
 * 根据配置文件中的参数对应代码的 `git blame`, 找到 commit
 * 看配置参数被系统中哪些地方引用了
+
+
+## Ref
+[如何阅读源代码]: https://www.codedump.info/post/20200605-how-to-read-code-v2020/
+
+* [如何阅读源代码]
