完成架构整洁之道 第3部分 笔记

--- a/docs/book/架构整洁之道.md
+++ b/docs/book/架构整洁之道.md
@@ -128,5 +128,91 @@
 * 并不需要这个设计永远可行，而且可能在整个程序的生命周期内，我们有足够的存储和处理能力来满足它。
 
 ## 设计原则
+这一部分内容主要讲如何利用 SOLID 原则将数据和函数组织成类，以及将这些类链接成程序。这里的程序可以指大型软件系统，也可以指单个组件。
+下面简单、直观的介绍 SOLID 原则。
 
-### 第七章、单一职责原则
+* SRP: 单一职责原则
+  * 每个软件模块都有且只有一个被改变的理由。
+* OCP: 开闭原则
+  * 如果软件系统想要更容易被改变，那么其设计就必须允许新增代码来修改系统行为，而非只能靠修改原来的代码。
+* LSP: 里氏替换原则
+  * 如果想用可替换的组件来构建软件系统，那么这些组件就必须遵守同一个约定，一遍让这些组件可以相互替换。
+* ISP: 接口隔离原则
+  * 软件设计避免不必要的依赖
+* DIP: 依赖反转原则
+  * 高层策略性代码不应该依赖底层实现细节的代码，恰恰相反，那些实现底层细节的代码应该依赖高层策略性的代码。
+
+
+### 第七章、SRP 单一职责原则
+每一个软件模块都应该只对**一类行为者**负责。
+
+文章举了一个非常有意思的例子，一个 `Employee` 类里面提供了 `calculatePay()` 和 `reportHours()` 两个函数，前者是为了给财务部门计算薪酬、后者是为了给人力部门汇报工时。
+
+![picture 2](../image/%E6%9E%B6%E6%9E%84%E6%95%B4%E6%B4%81%E4%B9%8B%E9%81%93/IMG_20230923-185344494.png)  
+
+由于在一个类里面，所以这两个函数复用了 `regularHours()` 函数来计算工时。
+
+![picture 6](../image/%E6%9E%B6%E6%9E%84%E6%95%B4%E6%B4%81%E4%B9%8B%E9%81%93/IMG_20230923-190810921.png)
+
+
+如果财务部门需要修改工时计算方法，而负责修改的程序员由于没有注意到 `regularHours()` 函数还被 `reportHours()` 调用了，所以直接修改了 `regularHours()` 函数。此时人力部门看到结果也是经过修改过后的数据！！很容易导致问题！！
+
+因此，需要将 `calculatePay()` 和 `reportHours()`  两个功能实现拆分到不同的类当中去，并使用各自私有的计算工时的函数。这样，有两个类分别对应财务和人力的计算逻辑，它们只对**一个行为者**负责。
+
+### 第八章、OCP 开闭原则
+
+设计良好的计算机软件应该易于扩展，同时抗拒修改。换句话说，一个设计良好的计算机系统应该在不需要修改的前提下就可以轻易被扩展。
+
+通俗的说，设计要考虑软件的**扩展性**。
+
+实现的方式（个人理解）就是，利用**依赖反转**原则，将高层抽象定义成接口，应用程序面向接口编程，而屏蔽底层实现细节，同时接口也可以实现多态。接口尽量保证稳定。
+
+### 第九章、LSP 里氏替换原则
+
+面向接口编程，应用程序通过调用各个接口完成处理逻辑，实现接口的不同衍生类可以相互替换。
+
+### 第十章、ISP 接口隔离原则
+
+任何层次的设计，都不应该依赖它并不需要的东西。
+
+举个例子，有如下的 OPS 类有三个函数，分别被 User1、User2、User3 类中的函数直接调用。这种直接依赖导致任何对 OPS 的 op1 函数的修改也会导致 User2、User3 被重新编译。
+
+```java
+public class OPS {
+  public void op1() {}
+  public void op2() {}
+  public void op3() {}
+} 
+```
+
+在 User 和 OPS 中间添加一个接口层，让底层实现 OPS 依赖接口（依赖反转），User 类调用接口。这样就能保证每个类不依赖最小化。
+
+```java
+public interface U1Ops {public void op1();}
+public interface U2Ops {public void op2();}
+public interface U3Ops {public void op3();}
+
+public class OPS implements U1Ops, U2Ops, U3Ops {
+  @Override
+  public void op1() {}
+  @Override
+  public void op2() {}
+  @Override
+  public void op3() {}
+} 
+```
+
+### 第十一章、DIP 依赖反转原则
+依赖反转原则(DIP)主要想告诉我们的是，如果想要设计一个灵活的系统，在源代码层次的依赖关系中就应该多引用抽象类型，而非具体实现。
+
+也就是说，在Java这类静态类型的编程语言中，在使用use、import、include这些语句时应该只引用那些包含接口、抽象类或者其他抽象类型声明的源文件，不应该引用任何具体实现。这里是针对那些经常会变动的实现而言的，并不包括像 String 这类稳定实现的类。
+
+通过依赖稳定的抽象层，来实现依赖反转。有一些可以**按需**遵循的最佳实践
+
+* 应在代码中多使用抽象接口，尽量避免使用那些多变的具体实现类
+* 不要在具体实现类上创建衍生类
+* 不要覆盖(override)包含具体实现的函数
+
+以下图为例，这条曲线将整个系统划分为两部分组件：抽象接口与其具体实现。抽象接口组件中包含了应用的所有高阶业务规则，而具体实现组件中则包括了所有这些业务规则所需要做的具体操作及其相关的细节信息。图中曲线代表**架构边界**。
+
+![picture 10](../image/%E6%9E%B6%E6%9E%84%E6%95%B4%E6%B4%81%E4%B9%8B%E9%81%93/IMG_20230924-011627203.png)  
